viết lớp DAOslide